crates/nico-doctor/tests/snapshots/json_snapshot__skipped_layer.snap
---
source: crates/nico-doctor/tests/json_snapshot.rs
expression: v
---
{
  "layers": [
    {
      "checks": [
        {
          "name": "pods_ready",
          "status": "ok",
          "value": "2/2"
        }
      ],
      "delta": "unchanged",
      "duration_ms": 42,
      "name": "cluster",
      "status": "ok"
    },
    {
      "checks": [],
      "delta": "unchanged",
      "duration_ms": 0,
      "name": "logs",
      "status": "skipped"
    },
    {
      "checks": [],
      "delta": "unchanged",
      "duration_ms": 0,
      "name": "grpc",
      "status": "skipped"
    },
    {
      "checks": [
        {
          "name": "pool",
          "status": "ok",
          "value": "pool 5/20 in-use"
        }
      ],
      "delta": "unchanged",
      "duration_ms": 42,
      "name": "postgres",
      "status": "ok"
    }
  ],
  "namespace": "nico",
  "preflight": {
    "ok": true
  },
  "summary": {
    "fail": 0,
    "ok": 2,
    "skipped": 2,
    "unknown": 0,
    "warn": 0
  },
  "version": 1
}
